feat: web new homepage, task detail drawer
